# swe4211-lab5-discolight-kolskyp-wakelin

./: README.md
JavaCode/src/: GUIBasedMainProgram.java
PiCode/: Toolchain-rpi.cmake
PiCode/baseline_docs/html/: _command_queue_8h.html  _command_queue_8h__dep__incl.map  _command_queue_8h__dep__incl.md5  _command_queue_8h__incl.map  _command_queue_8h__incl.md5  _command_queue_8h_source.html  _g_p_i_o_8cpp.html  _g_p_i_o_8cpp.js  _g_p_i_o_8cpp__incl.map  _g_p_i_o_8cpp__incl.md5  _g_p_i_o_8cpp_a145e2c80aeb3692c89215114328c4ae2_icgraph.map  _g_p_i_o_8cpp_a145e2c80aeb3692c89215114328c4ae2_icgraph.md5  _g_p_i_o_8cpp_a1e658ee564d5562a31672768f60f73ba_icgraph.map  _g_p_i_o_8cpp_a1e658ee564d5562a31672768f60f73ba_icgraph.md5  _g_p_i_o_8cpp_a24ada8da25cf6eb0dcca7f30adc914b5_icgraph.map  _g_p_i_o_8cpp_a24ada8da25cf6eb0dcca7f30adc914b5_icgraph.md5  _g_p_i_o_8cpp_a25ac8c5f8cc5e5606c72ad98bd39497c_icgraph.map  _g_p_i_o_8cpp_a25ac8c5f8cc5e5606c72ad98bd39497c_icgraph.md5  _g_p_i_o_8cpp_a277cb482a81cde3d3bfe9f1a2a6317ce_icgraph.map  _g_p_i_o_8cpp_a277cb482a81cde3d3bfe9f1a2a6317ce_icgraph.md5  (+183 more)
PiCode/docs/: Doxyfile  Doxyfile.in
PiCode/src/: .project  CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  FreeRunningRepeatingTask.cpp  FreeRunningRepeatingTask.h  GPIO.cpp  GPIO.h  GenericThreadInfo.cpp  GenericThreadInfo.h  LightController.cpp  LightController.h  NetworkCfg.h  NetworkCommands.h  NetworkDebugLibrary.cpp  NetworkDebugLibrary.h  NetworkManager.cpp  NetworkManager.h  NetworkMessage.h  PeriodicTask.cpp  PeriodicTask.h  RunnableClass.cpp  RunnableClass.h  debug_cfg.h  main.cpp
(+502 files in other folders)
